--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1440рх;
+    max-width: 1440px;
     /* min-height: 600px; */
     margin-left: auto;
     margin-right: auto;
@@ -272,9 +272,7 @@ body {
     flex-basis: calc((100% - 3 * 24px) / 4);
 }
 
-/* .features-item:last-child {
-    margin-right: 0px;
-} */
+
 
 
 /*our work*/
